[gd_scene load_steps=12 format=3 uid="uid://bwnkkftck8v31"]

[ext_resource type="Script" uid="uid://cg1rh7fdamh02" path="res://Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ckm4vkp5a4lve" path="res://Player.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://b8j7cjvcxv676" path="res://Mob.tscn" id="3"]
[ext_resource type="Environment" uid="uid://vh2a5mcdduqu" path="res://default_env.tres" id="4"]
[ext_resource type="Script" uid="uid://dvx8f3pbpw0po" path="res://ScoreLabel.gd" id="6"]
[ext_resource type="Theme" uid="uid://cb03netbjio0m" path="res://ui_theme.tres" id="7"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="2"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3dxm6"]

[sub_resource type="CylinderMesh" id="3"]

[sub_resource type="Curve3D" id="5"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 14, 0, -15, 0, 0, 0, 0, 0, 0, -13, 0, -15, 0, 0, 0, 0, 0, 0, -13, 0, 16, 0, 0, 0, 0, 0, 0, 14, 0, 16, 0, 0, 0, 0, 0, 0, 14, 0, -15),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node3D" node_paths=PackedStringArray("player_node")]
script = ExtResource("1")
mob_scene = ExtResource("3")
player_node = NodePath("Player")

[node name="Ground" type="StaticBody3D" parent="." groups=["static_bodies_fixable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 2

[node name="CollisionShape" type="CollisionShape3D" parent="Ground"]
shape = SubResource("1")

[node name="MeshInstance" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("2")
surface_material_override/0 = SubResource("StandardMaterial3D_3dxm6")

[node name="DirectionalLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.5, -0.777049, 0.382355, 0, 0.441506, 0.897258, -0.866025, -0.448629, 0.220753, 0, 12.5592, 14.7757)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0.183514, 0, 0)

[node name="Camera" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, -2.98023e-08, 0, 2.98023e-08, 1, 0, 9.53674e-07, 19)
projection = 1
current = true
fov = 48.6
size = 19.0

[node name="Cylinders" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="MeshInstance" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -15)
mesh = SubResource("3")

[node name="MeshInstance3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21, 0, -15)
mesh = SubResource("3")

[node name="MeshInstance2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21, 0, 16)
mesh = SubResource("3")

[node name="MeshInstance4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 16)
mesh = SubResource("3")

[node name="SpawnPath" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
curve = SubResource("5")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-4.37113e-08, 0, 0.999999, 0, 1, 0, -0.999999, 0, -4.37113e-08, 14, 0, -15)
rotation_mode = 1
cubic_interp = false
loop = false

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7")

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_right = 168.04
offset_bottom = 76.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 51
text = "Score: 0"
script = ExtResource("6")

[node name="Retry" type="ColorRect" parent="UserInterface"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.447059)

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "Press Enter to retry"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 609.0
offset_top = 15.0
offset_right = 1127.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "673380067-2 สิรภัทร ลีล้าน Sec.1"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("4")
